--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "crypto-js": "^4.1.1",
         "ethers": "^6.6.2",
         "framer-motion": "^7.2.1",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "sass": "^1.54.5",
+        "tc-formatter": "^0.0.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
