--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-scripts": "5.0.1",
         "sass": "^1.54.5",
         "tc-formatter": "^0.0.2",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "web3": "^4.0.2"
     },
     "scripts": {
         "start": "react-scripts start",
