--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "bignumber.js": "^9.1.1",
         "crypto-js": "^4.1.1",
         "ethers": "^6.6.2",
         "framer-motion": "^7.2.1",
